objects/ssot__PersonPublicProfilePrefSet__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CanShareEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Share Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__CanShareLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Share Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__CanSharePersonEducation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Share Person Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__CanSharePersonEmployment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Share Person Employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__CanSharePhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Share Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__CanSharePronouns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Share Pronouns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__CanShareWebsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Share Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Person Public Profile Preference Set Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsProfilePublic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Profile Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileVisibleDateTime__c</fullName>
        <label>Profile Visible Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UsageType__c</fullName>
        <label>Usage Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291150340_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonPublicProfilePrefSet_ContactId_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>PersonPublicProfilePrefSet_ContactId_rel</relationshipLabel>
        <relationshipName>rel_1720291150340_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>